--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,5 @@
 service: notes-app-api
 
-# Use the serverless-webpack plugin to transpile ES6
 plugins:
     - serverless-webpack
     - serverless-offline
@@ -31,12 +30,6 @@ iamRoleStatements:
       Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
-    # Defines an HTTP API endpoint that calls the main function in create.js
-    # - path: url path is /notes
-    # - method: POST request
-    # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
-    #     domain api call
-    # - authorizer: authenticate using the AWS IAM role
     create:
         handler: create.main
         events:
@@ -46,9 +39,6 @@ functions:
                   cors: true
                   authorizer: aws_iam
     get:
-        # Defines an HTTP API endpoint that calls the main function in get.js
-        # - path: url path is /notes/{id}
-        # - method: GET request
         handler: get.main
         events:
             - http:
@@ -57,13 +47,26 @@ functions:
                   cors: true
                   authorizer: aws_iam
     list:
-        # Defines an HTTP API endpoint that calls the main function in list.js
-        # - path: url path is /notes
-        # - method: GET request
         handler: list.main
         events:
             - http:
-                  path: notes
+                  path: notes/
                   method: get
+                  cors: true
+                  authorizer: aws_iam
+    update:
+        handler: update.main
+        events:
+            - http:
+                  path: notes/{id}
+                  method: put
+                  cors: true
+                  authorizer: aws_iam
+    delete:
+        handler: delete.main
+        events:
+            - http:
+                  path: notes/{id}
+                  method: delete
                   cors: true
                   authorizer: aws_iam
